--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                         <div class="container">
                           <div class="row">
                             <div class="col text-right text-capitalize">
-                             &copy; جميع الحقوق محفوظة لدي الصحوة
+                             &copy; جميع الحقوق محفوظة لـ DX COMMUNITY For Web Design
                             </div>
                             
                             <div class="col text-left">
